--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -1,2 +1,8 @@
 anonymous_enable=YES
 listen=YES
+
+#caso o ftp esteja atras de NAT
+#descomente as linha a baixo
+#e configure pasv_address com ip publico do FTP
+#pasv_enable=YES
+#pasv_address=8.8.8.8
